# setuptools-ext

./: README.rst  pyproject.toml  setuptools_ext.py
.github/workflows/: tests.yml
tests/: example_project.toml  example_readme.rst  test_setuptools_ext.py
