[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "setuptools-ext"
version = "0.5"
description = "Extension of setuptools to support all core metadata fields"
authors = [
    {name = "Wim Glenn"},
    {email = "hey@wimglenn.com"},
]
readme = "README.rst"
keywords = ["setuptools", "packaging", "metadata"]
license = {text = "MIT"}
dependencies = [
    "setuptools >= 61.0.0; python_version >= '3.7'",
    "setuptools",
    "toml; python_version < '3.11'",
    "pathlib2; python_version < '3.5'",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "wheel",
]

[project.urls]
Homepage = "https://github.com/wimglenn/setuptools-ext"
