[build-system]
requires = [
    "setuptools >= 68.2.0",
    "tomli; python_version < '3.11'",
]
build-backend = "setuptools_ext"
backend-path = ["."]

[project]
name = "setuptools-ext"
version = "0.9"
requires-python = ">= 3.8"
description = "Extension of setuptools to support all core metadata fields"
authors = [
    {name = "Wim Glenn"},
    {email = "hey@wimglenn.com"},
]
readme = "README.rst"
keywords = ["setuptools", "packaging", "metadata"]
license = {text = "MIT"}
dependencies = [
    "setuptools >= 68.2.0",
    "tomli; python_version < '3.11'",
]

[project.urls]
Homepage = "https://github.com/wimglenn/setuptools-ext"
